--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aesthetestore",
+  "name": "clothstore",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
+    "next": "14.2.5",
+    "nodemailer": "^6.9.14",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "react-top-loading-bar": "^2.3.1"
+
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
+    
   }
 }
